<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222525"
    android:visibility="visible"
    tools:context=".SecondActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="346dp"
        android:layout_height="71dp"
        android:layout_weight="8"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="143dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_back"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/Username"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/acme"
            android:text="@string/sk_singh"
            android:textColor="#13EFDD"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="65dp"
        android:layout_height="71dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/profile"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clipToOutline="true"
            android:contentDescription="@string/profile"
            android:scaleType="fitCenter"
            android:src="@drawable/user" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#AD5D5959"
            android:iconifiedByDefault="false"
            android:orientation="vertical"
            android:queryHint="Search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/TaskList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/Addtask"
        android:layout_width="55dp"
        android:layout_height="65dp"
        android:layout_marginBottom="88dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_add_24"
        app:backgroundTint="@color/fui_linkColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>